2003-01-25  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>

	* cfgloopmanip.c (force_single_succ_latches): Fix missindentation.

2003-02-05  Hans Boehm <Hans.Boehm@hp.com>

	* config/ia64/unwind-ia64.c: include coretypes.h, tm.h to get
	  config/ia64/linux.h

2002-02-05  Roger Sayle  <roger@eyesopen.com>

	* cfgloop.h (flow_bb_inside_loop_p): Correct prototype again.

2003-02-05  Jakub Jelinek  <jakub@redhat.com>

	PR optimization/8555
	* config/i386/i386.md (sse_mov?fcc split): Handle op2 == op3 case
	instead of aborting.

2003-02-04  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.md (UNSPEC_BSF): Remove.
	(ffssi2): Split into cmove and no_cmove insns and splitters;
	lose pentium float trick for now.
	(ffssi_1): Add * to name; use CTZ instead of UNSPEC.
	(ctzsi2, clzsi2, bsr): New.

2003-02-04  Richard Henderson  <rth@redhat.com>

	* config/ia64/ia64.c (rtx_needs_barrier): Handle POPCOUNT,
	UNSPEC_GETF_EXP; remove UNSPEC_POPCNT.
	* config/ia64/ia64.md (UNSPEC_POPCNT): Remove.
	(ffsdi2): Use popcount instead of unspec.
	(popcountdi2): Rename from *popcnt.
	(ctzdi2, clzdi2, getf_exp_tf): New.

2003-02-04  Kazu Hirata  <kazu@cs.umass.edu>

	* genconfig.c (main): Generate CC0_P.
	* rtl.h (CC0_P): Remove.

2003-02-04  Richard Henderson  <rth@redhat.com>

	* libgcc2.h, libgcc2.c (__ffsSI2): New.
	(__ffsDI2): Rename from __ffsdi2.
	* mklibgcc.in (lib2funcs): Add _ffssi2.

2003-02-04  Richard Henderson  <rth@redhat.com>

	* libgcc2.c (__paritysi2, __paritydi2): Replace last two reduction
	rounds with a "bit table" lookup.

2003-02-04  Ulrich Weigand  <uweigand@de.ibm.com>

	* reload.c (find_reloads): Do not use the mode specified in the insn
	pattern as reload mode for address operands.  Do not generate optional 
	reloads for operands where a mandatory reload was already pushed.

2003-02-04  Richard Henderson  <rth@redhat.com>

	* longlong.h [alpha] (count_leading_zeros, count_trailing_zeros): Use
	builtins instead of inline assembly.
