@@ -4924,6 +4924,24 @@
   ix86_free_from_memory (GET_MODE (operands[1]));
   DONE;
 })
+
+(define_expand "floatunssisf2"
+  [(use (match_operand:SF 0 "register_operand" ""))
+   (use (match_operand:SI 1 "register_operand" ""))]
+  "TARGET_SSE && TARGET_SSE_MATH && !TARGET_64BIT"
+  "x86_emit_floatuns (operands); DONE;")
+
+(define_expand "floatunsdisf2"
+  [(use (match_operand:SF 0 "register_operand" ""))
+   (use (match_operand:DI 1 "register_operand" ""))]
+  "TARGET_SSE && TARGET_SSE_MATH && TARGET_64BIT"
+  "x86_emit_floatuns (operands); DONE;")
+
+(define_expand "floatunsdidf2"
+  [(use (match_operand:DF 0 "register_operand" ""))
+   (use (match_operand:DI 1 "register_operand" ""))]
+  "TARGET_SSE2 && TARGET_SSE_MATH && TARGET_64BIT"
+  "x86_emit_floatuns (operands); DONE;")
 
 ;; Add instructions
 
